force-app/main/default/objects/Regular_Routing__c/Regular_Routing__c.object-meta.xml
<CustomObject>
    <label>Regular Routing</label>
    <nameField>
        <label>Routing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regular Routings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>