force-app/main/default/objects/Regular_Routing__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity</label>
    <referenceTo>Commodity__c</referenceTo>
    <relationshipLabel>Regular Routings</relationshipLabel>
    <relationshipName>Regular_Routing</relationshipName>
    <type>Lookup</type>
</CustomField>