force-app/main/default/objects/Regular_Routing__c/fields/DG_Class__c.field-meta.xml
<CustomField>
    <fullName>DG_Class__c</fullName>
    <label>DG Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Class 1</fullName>
            </value>
            <value>
                <fullName>Class 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>