force-app/main/default/objects/Regular_Routing__c/fields/Discharge_Place__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Place__c</fullName>
    <label>Discharge Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>