force-app/main/default/objects/Regular_Routing__c/fields/Kind_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Kind_of_Shipment__c</fullName>
    <label>Kind of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCL</fullName>
            </value>
            <value>
                <fullName>LCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>