force-app/main/default/objects/Regular_Routing__c/fields/Place_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Discharge</label>
    <referenceTo>Place__c</referenceTo>
    <relationshipLabel>Regular Routings</relationshipLabel>
    <relationshipName>Regular_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>