force-app/main/default/objects/Regular_Routing__c/fields/Port_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Destination</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Regular Routings</relationshipLabel>
    <relationshipName>Regular_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>